# rust-cryptopp

./: Cargo.toml  README.md  build.rs  build.sh  notes.org  old_test.rs
src/: arr.rs  cpp.rs  integer.rs  lib.rs  sha3.rs
src/cpp/: HashTransformation.cpp  Integer.cpp  SHA3_256.cpp  macro.h
src/hash/: mod.rs  sha3.rs
