[package]
name = "rust-cryptopp"
version = "0.0.1"
authors = ["anthony cantor"]

build = "build.rs"

[dependencies]
libc = "0.1"

[dev-dependencies]
#parser-combinators = "0.5.1"
nom = "~0.3.0"

[build-dependencies]
pkg-config = "0.3"
gcc = "0.3"

[build-dependencies.rust-cryptopp-gen]
path = "gen"

